--- a/stats_analyses_CRTs.Rmd
+++ b/stats_analyses_CRTs.Rmd
@@ -546,22 +546,22 @@ iac <- 0.7  # Individual autocorrelation (correlation between measurements withi
 ss_ind_1arm <- pwr.2p.test(h = ES.h(p_int, p_cont), 
                            sig.level = alpha, 
                            power = power)
-ss_ind <- ss_ind_1arm$n * 2
+ss_ind <- ss_ind_1arm$n * 3
 # cat("Total sample size individual RCT, pwr:", ss_ind)
 
 # Second, inflate for clustering, following a standard parallel 1:1 CRT without repeated measures/baseline period
 ss_crt_standard <- ss_ind * deff_c
-cat("Total sample size CRT, standard:", ss_crt_standard) # total sample size for a standard CRT
+cat("Total sample size CRT, standard:", ss_crt_standard) # total sample size for a standard CRT for 2 comparisons (shared control)
 
 n_clus_crt_standard <- ss_crt_standard / cluster_size
-cat("Total N clusters CRT, standard:", n_clus_crt_standard) # total number of clusters for a standard CRT (divide by arm or sequence/steps if SWCRT)
+cat("Total N clusters CRT, standard:", n_clus_crt_standard) # total number of clusters for a standard CRT for 2 comparisons (shared control)
 
 # Third, add the baseline period and assume a closed cohort, i.e., 1 repeated measure among the same individuals
 ss_crt_b_period <- deff_r*deff_c*ss_ind 
-cat("Total sample size CRT, baseline period:", ss_crt_b_period) # total sample size for a CRT with baseline period design
+cat("Total sample size CRT, baseline period:", ss_crt_b_period) # total sample size for a CRT with baseline period design, for 2 comparisons (shared control)
 
 n_clus_crt_b_period <- ss_crt_b_period / cluster_size
-cat("Total N clusters CRT, baseline period:", n_clus_crt_b_period) # total number of clusters for a CRT with baseline period design (divide by arm or sequence/steps if SWCRT)
+cat("Total N clusters CRT, baseline period:", n_clus_crt_b_period) # total number of clusters for a CRT with baseline period design, for 2 comparisons (shared control)
 
 ### since I divided my alpha, I can make two comparisons (Intervention 1 vs Usual care & Intervention 2 vs Usual care)
 ```
@@ -607,7 +607,7 @@ power <- 0.90  # 90% power
 mean_diff <- 15  # Detecting at least a 15 mg/dL reduction in nonHDL cholesterol
 sd <- 44  # Standard deviation of the outcome (non-HDL cholesterol)
 
-cluster_size <- 14  # Average cluster size
+cluster_size <- 13  # Average cluster size
 icc <- 0.15  # Intra-cluster correlation coefficient
 cac <- 1  # Cluster autocorrelation
 iac <- 0.6  # Individual autocorrelation (correlation between measurements within individuals)
@@ -628,22 +628,22 @@ ss_ind_1arm <- pwr.t.test(d = mean_diff / sd,
                           power = power, 
                           type = "two.sample", 
                           alternative = "two.sided")
-ss_ind <- ss_ind_1arm$n * 2  # Total sample size for one group vs control
+ss_ind <- ss_ind_1arm$n * 2  # Total sample size for 2 comparisons (shared control)
 # cat("Total sample size individual RCT (per arm):", ss_ind, "\n")
 
 # Second, inflate for clustering, following a standard parallel 1:1 CRT without repeated measures/baseline period
 ss_crt_standard <- ss_ind * deff_c
-cat("Total sample size CRT, standard:", ss_crt_standard) # total sample size for a standard CRT
+cat("Total sample size CRT, standard:", ss_crt_standard) # total sample size for a standard CRT, for 2 comparisons (shared control)
 
 n_clus_crt_standard <- ss_crt_standard / cluster_size
-cat("Total N clusters CRT, standard:", n_clus_crt_standard) # total number of clusters for a standard CRT (divide by arm or sequence/steps if SWCRT)
+cat("Total N clusters CRT, standard:", n_clus_crt_standard) # total number of clusters for a standard CRT, for 2 comparisons
 
 # Third, add the baseline period and assume a closed cohort, i.e., 1 repeated measure among the same individuals
 ss_crt_b_period <- deff_r*deff_c*ss_ind 
-cat("Total sample size CRT, baseline period:", ss_crt_b_period) # total sample size for a CRT with baseline period design
+cat("Total sample size CRT, baseline period:", ss_crt_b_period) # total sample size for a CRT with baseline period design, for 2 comparisons (shared control)
 
 n_clus_crt_b_period <- ss_crt_b_period / cluster_size
-cat("Total N clusters CRT, baseline period:", n_clus_crt_b_period) # total number of clusters for a CRT with baseline period design (divide by arm or sequence/steps if SWCRT)
+cat("Total N clusters CRT, baseline period:", n_clus_crt_b_period) # total number of clusters for a CRT with baseline period design, for 2 comparisons (shared control)
 
 ### since I divided my alpha, I can make two comparisons (Intervention 1 vs Usual care & Intervention 2 vs Usual care)
 ```
